# adres

./: README.md  extract.sh  shell.nix
validator/: main.py  pyproject.toml
validator/main/: settings.py  urls.py
validator/validator/: views.py
validator/validator/migrations/: 0001_initial.py
validator/validator/templates/: index.html  upload.html
