[tool.poetry]
name = "validator"
version = "0.1.0"
description = ""
authors = ["Santi <saaperezru@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
pycsvschema = "^0.0.6"
django-validators = "^1.0.1"
validators = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
